# dalmatian

./: pyproject.toml
dalmatian/: wmanager.py
