[tool.poetry]
name = "dalmatian"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<4.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
pytz = "^2023.3.post1"
firecloud = ">=0.16.9"
iso8601 = "^2.1.0"
google-cloud-storage = "^2.14.0"
agutil = "^5.0.1"
crayons = "^0.4.0"
hound = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
